--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 html{
   font-family: Rockwell, “Courier Bold”, Courier, Georgia, Times, “Times New Roman”, serif;
   width: 100%;
+  background-color: honeydew;
 }
