--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,18 @@ html{
   width: 100%;
   background-color: honeydew;
 }
+
+footer{
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 5%;
+  bottom:0;
+
+}
+
+
+#no_scroll {
+  overflow: hidden;
+
+}
