--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,14 @@ footer{
   width: 100%;
   height: 5%;
   bottom:0;
+  left: 0;
+  position: absolute;
+  font-size: 14px;
+  line-height: 10px;
 
 }
 
 
 #no_scroll {
   overflow: hidden;
-
 }
