--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,15 @@ html{
 }
 
 footer{
-  background-color: black;
+  background-color: rgba(255, 255, 255, 0.5);
   color: white;
   width: 100%;
-  height: 5%;
+  height: 2%;
   bottom:0;
   left: 0;
   position: absolute;
   font-size: 14px;
-  line-height: 10px;
+  line-height: normal;
 
 }
 
