--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,11 @@ html{
   background-color: honeydew;
 }
 
-footer{
-  background-color: rgba(255, 255, 255, 0.5);
-  color: white;
-  width: 100%;
-  height: 3%;
-  bottom:0;
-  left: 0;
-  position: absolute;
-  font-size: 10px;
-  line-height: normal;
-
+header{
+  background-color: lightgreen;
+  height: 25%;
+  top: 0;
 }
-
 
 #no_scroll {
   overflow: hidden;
