--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html{
   font-family: Rockwell, “Courier Bold”, Courier, Georgia, Times, “Times New Roman”, serif;
   width: 100%;
-  background-color: honeydew;
 }
 
 header{
@@ -10,6 +9,10 @@ header{
   height: 25%;
   top: 0;
   left: 0;
+}
+
+body{
+  background-color: whitesmoke;
 }
 
 #no_scroll {
