--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,22 @@ body{
   background-color: whitesmoke;
 }
 
+.page_content{
+  z-index: 0;
+  position: relative;
+}
+
+#sidebar{
+  text-decoration: none;
+  z-index: 0;
+  position: fixed;
+  right: 0;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+
+}
+
 #no_scroll {
   overflow: hidden;
 }
