--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,14 @@ html{
 }
 
 header{
-  width: 100%;
+  width: 75%;
   background-color: lightgreen;
   height: 25%;
   top: 0;
   left: 0;
+}
+header h1 {
+  text-align: center;
 }
 
 body{
@@ -28,7 +31,10 @@ body{
   left: 0px;
   top: 0px;
   bottom: 0px;
-
+  width: 15%;
+  padding: 5px;
+  background: #333;
+  color: whitesmoke;
 }
 
 #no_scroll {
