--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ body{
 }
 
 #sidebar{
-  text-decoration: none;
   z-index: 0;
   position: fixed;
   right: 0;
@@ -34,7 +33,15 @@ body{
   width: 15%;
   padding: 5px;
   background: #333;
-  color: whitesmoke;
+  color: rgba(245, 245, 245, 0.8)
+}
+
+#sidebar ul li:hover{
+  color: rgba(245, 245, 245, 1);
+}
+
+#sidebar ul li{
+  text-decoration: none;
 }
 
 #no_scroll {
