--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,11 @@ body{
 #no_scroll {
   overflow: hidden;
 }
+
+.toggle{
+  position: fixed;
+  top: 10px;
+  right: 0;
+  left: 90%;
+  bottom: 0;
+}
