--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,10 @@ body{
 }
 
 .toggle{
+  text-decoration: none;
   position: fixed;
   top: 10px;
-  right: 0;
-  left: 90%;
+  right: 90%;
+  left: 0;
   bottom: 0;
 }
