--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body{
   left: 0px;
   top: 0px;
   bottom: 0px;
-  width: 10%;
+  width: 40px;
   padding: 5px;
   background: #333;
   color: rgba(245, 245, 245, 0.8)
@@ -57,8 +57,9 @@ body{
   text-decoration: none;
   position: fixed;
   top: 10px;
-  right: 90%;
-  left: 0;
+  right: 0;
+  left: 35px;
   bottom: 0;
   z-index: 1;
+  font-size: 14px;
 }
