--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body{
 #sidebar li{
   list-style: none;
   margin-bottom: 16px;
+  margin-top: 8px;
   cursor: pointer;
 
 }
@@ -63,4 +64,8 @@ body{
   bottom: 0;
   z-index: 1;
   font-size: 30px;
+}
+
+a{
+  border: 2px solid black;
 }
