--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body{
 }
 
 #sidebar li{
+  border: 2px solid white;
   font-family: "ubuntu", serif;
   font-size: 16px;
   list-style: none;
@@ -69,4 +70,8 @@ body{
 }
 a:hover{
   color: lightgreen;
+}
+
+a{
+  text-decoration: none;
 }
