--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body{
   margin-bottom: 10px;
   margin-top: 12px;
   cursor: pointer;
+  padding-left: 10px;
   font-family: "ubuntu", sans-serif;
 
 
