--- a/styles.css
+++ b/styles.css
@@ -43,14 +43,13 @@ body{
 }
 
 #sidebar li{
-  border: 2px solid white;
   font-family: "ubuntu", serif;
   font-size: 16px;
   list-style: none;
-  margin-bottom: 10px;
-  margin-top: 12px;
+  margin-bottom: -20px;
+  margin-top: 40px;
+  margin-left: -20px;
   cursor: pointer;
-  padding-left: 10px;
   font-family: "ubuntu", sans-serif;
 
 
