--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
   background-color: whitesmoke;
 }
 
-.menu_toggle {
+.menu-side {
   background-color: #333;
   border-right: 1px solid #000;
   color: #fff;
