--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,19 @@ html{
 body{
   background-color: whitesmoke;
 }
+.menu {
+  overflow-x: hidden;
+  position: relative;
+  left: 0;
+}
+
+.menu-open {
+  left: 231px;
+}
+
+.menu-open .menu-side {
+  left: 0;
+}
 
 .menu-side {
   background-color: #333;
@@ -13,7 +26,7 @@ body{
   color: #fff;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -231px;
   width: 210px;
   height: 100%;
   padding: 10px;
