--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,12 @@ body{
   height: 100%;
   padding: 10px;
 }
+
+.menu_toggle {
+  font-size: 16px;
+  color: black;
+}
+
+a{
+  text-decoration: none;
+}
