--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body{
   width: 210px;
   height: 100%;
   padding: 10px;
-  text-decoration: none;
+  list-style: none;
   margin-bottom: 16px;
 }
 
