--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ body{
   width: 210px;
   height: 100%;
   padding: 10px;
+
+}
+
+.menu-side ul li {
   list-style: none;
   margin-bottom: 16px;
 }
