--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
 .menu-side {
   background-color: #333;
   border-right: 1px solid #000;
-  color: rgba(255, 255, 255, 0.8);
+  color: white;
   position: fixed;
   top: 0;
   left: -231px;
