--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,14 @@ body{
 
 a{
   text-decoration: none;
-  color: #fff;
+
 }
 
 a:default {
+    color: rgba(255, 255, 255, 0.8);
 }
 
 a:hover {
+  color: rgba(255, 255, 255, 1);
+
 }
