messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,10 @@ a:hover {
   color: lightgreen;
 
 }
+.
+.middle {
+  width: 80%;
+  margin-left: 20%;
+  background-color: lightgrey;
+  bottom: 0px;
+}
