messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,5 @@ a:hover {
 .middle {
   width: 80%;
   margin-left: 20%;
-  background-color: lightgrey;
-  bottom: 0px;
+  background-color: black;
 }
