messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,10 @@ a:hover {
   color: lightgreen;
 
 }
-.
+
 .middle {
   width: 80%;
   margin-left: 20%;
   background-color: black;
+  height: 100%;
 }
