--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,8 @@ a:hover {
 
 .middle {
   width: 80%;
-  margin-left: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
   background-color: black;
   height: 100%;
 }
