--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,14 @@ html{
   font-family: Rockwell, “Courier Bold”, Courier, Georgia, Times, “Times New Roman”, serif;
 }
 
+header {
+  overflow: none;
+}
+
 header h1 {
   text-align: center;
 }
+
 
 body{
   background-color: whitesmoke;
@@ -75,4 +80,5 @@ a:hover {
   margin-right: 10%;
   background-color: black;
   height: 100%;
+  overflow-y: scroll;
 }
