messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,12 @@ a:hover {
 }
 
 .middle {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  background-color: black;
+  position: fixed;
+  width: 65%;
+  margin-left: 17.5%;
+  margin-right: 17.5%;
+  background-color: lightgrey;
   overflow-y: scroll;
   height: 100%;
+  border-radius: 5px;
 }
