messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a:hover {
   overflow-y: scroll;
   height: 100%;
   border-radius: 15px;
-  padding: 30px;
+  padding: 50px;
 }
 
 .article h1{
@@ -92,11 +92,11 @@ a:hover {
 }
 
 .article p {
-  text-align: center;
+  text-align: left;
   font-family: "ubuntu", serif;
 }
 
 .article h3 {
   text-align: left;
-  
+
 }
