messing with fonts

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html{
-  font-family: Rockwell, “Courier Bold”, Courier, Georgia, Times, “Times New Roman”, serif;
+  font-family: Oswald;
 }
 
 header {
