--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html{
 
 header {  overflow: hidden;
   background-color: deepskyblue;
+  height: 200px;
 }
 
 header h1 {
@@ -90,8 +91,7 @@ a:hover {
   overflow-y: scroll;
   height: 100%;
   padding: 50px;
-  z-index: 1;
-  margin-top: 200px;
+  margin-top: -100px;
 }
 
 .article {
