--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,8 @@ a:hover {
   height: 100%;
   padding: 50px;
   margin-top: -100px;
+  box-shadow: 5px 0 15px -4px rgba(0, 0, 0, 0.8), -5px 0 8px -4px rgba(0, 0, 0, 0.8);
+
 }
 
 .article {
