--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,7 @@ a:hover {
   height: 100%;
   padding: 50px;
   margin-top: -100px;
-  box-shadow: 5px 0 15px -4px rgba(0, 0, 0, 0.8), -5px 0 8px -4px rgba(0, 0, 0, 0.8);
-
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37)
 }
 
 .article {
